Rewrite the AnalyzerTest.java for the new analyze method